Fix aligning and margins for likes
And remove empty container (similar to f643c6a).

--- a/styles/shared/likes.scss
+++ b/styles/shared/likes.scss
@@ -10,7 +10,7 @@
   ul {
     list-style: none;
     padding: 0;
-    margin: 0 4px 10px 19px;
+    margin: 0 4px 0 19px;
 
     li {
       display: inline;
